Handler增加了抽象类方便创建实例，编写了登录代码并增加了用于解析的parser

--- a/KMSakuraLib/KMSakuraLib.csproj
+++ b/KMSakuraLib/KMSakuraLib.csproj
@@ -10,12 +10,13 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="log4net" Version="2.0.12" />
     <PackageReference Include="Prism.Core" Version="8.1.97" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\MiraiCsharp\Mirai-CSharp.HttpApi\Mirai-CSharp.HttpApi.csproj" />
-    <ProjectReference Include="..\..\..\MiraiCsharp\Mirai-CSharp\Mirai-CSharp.csproj" />
+    <ProjectReference Include="..\..\MiraiCsharp\Mirai-CSharp.HttpApi\Mirai-CSharp.HttpApi.csproj" />
+    <ProjectReference Include="..\..\MiraiCsharp\Mirai-CSharp\Mirai-CSharp.csproj" />
   </ItemGroup>
 
 </Project>
