--- a/KMSakura/KMSakura.csproj
+++ b/KMSakura/KMSakura.csproj
@@ -10,4 +10,10 @@
     <ProjectReference Include="..\KMSakuraLib\KMSakuraLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="log4net.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
