--- a/KMSakuraLib/KMSakuraLib.csproj
+++ b/KMSakuraLib/KMSakuraLib.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="log4net" Version="2.0.12" />
+    <PackageReference Include="NLog" Version="4.7.11" />
     <PackageReference Include="Prism.Core" Version="8.1.97" />
   </ItemGroup>
 
