完善Handler的日志记录并完善对应Parser

--- a/KMSakura/NLog.config
+++ b/KMSakura/NLog.config
@@ -10,7 +10,7 @@
 					fileName="${basedir}/logs/${event-properties:number}_RecordLog.txt"
 					layout="${longdate} ${uppercase:${level}} ${message}"
 					archiveFileName="${basedir}/archives/${event-properties:number}_RecordLog-{#####}.txt"
-					archiveAboveSize="102400"
+					archiveAboveSize="1024000"
 					archiveNumbering="Sequence"
 					concurrentWrites="true"
 					keepFileOpen="false" />	
@@ -20,7 +20,7 @@
 			fileName="${basedir}/logs/RunLog.txt"
 			layout="${longdate} ${uppercase:${level}} ${message}"
 			archiveFileName="${basedir}/archives/RecordLog-{#####}.txt"
-			archiveAboveSize="102400"
+			archiveAboveSize="1024000"
 			archiveNumbering="Sequence"
 			concurrentWrites="true"
 			keepFileOpen="false" />
