--- a/KMSakuraLib/KMSakuraLib.csproj
+++ b/KMSakuraLib/KMSakuraLib.csproj
@@ -1,18 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <UseWPF>true</UseWPF>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NLog" Version="4.7.11" />
-    <PackageReference Include="Prism.Core" Version="8.1.97" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\MiraiCsharp\Mirai-CSharp.HttpApi\Mirai-CSharp.HttpApi.csproj" />
-    <ProjectReference Include="..\..\MiraiCsharp\Mirai-CSharp\Mirai-CSharp.csproj" />
+    <Folder Include="Events\" />
+    <Folder Include="Messages\" />
+    <Folder Include="Models\Message\" />
+    <Folder Include="Models\Event\" />
+    <Folder Include="Plugins\" />
   </ItemGroup>
 
 </Project>
